--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <canvas id="canvas"></canvas>
   <h1 class="main-title">Business Card</h1>
   <div class="card">
     <img src="images/RMIT_University_Logo.svg" alt="RMIT University Logo" class="logo">
@@ -55,6 +56,7 @@
       </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
